// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontVariantPosition renders 0 1`] = `
Array [
  .c0 {
  font-variant-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders function 1`] = `
Array [
  .c0 {
  font-variant-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  font-variant-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders negative number 1`] = `
Array [
  .c0 {
  font-variant-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-variant-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-variant-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-variant-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-variant-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-variant-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-variant-position: July;
}

@media May {
  .c0 {
    font-variant-position: August;
  }
}

@media April {
  .c0 {
    font-variant-position: September;
  }
}

@media January {
  .c0 {
    font-variant-position: November;
  }
}

@media April {
  .c0 {
    font-variant-position: August;
  }
}

@media June {
  .c0 {
    font-variant-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: July;
}

@media May {
  .c0 {
    font-variant-position: August;
  }
}

@media April {
  .c0 {
    font-variant-position: September;
  }
}

@media January {
  .c0 {
    font-variant-position: November;
  }
}

@media April {
  .c0 {
    font-variant-position: August;
  }
}

@media June {
  .c0 {
    font-variant-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-position: November;
  }
}

@media April {
  .c0 {
    font-variant-position: January;
  }
}

@media January {
  .c0 {
    font-variant-position: December;
  }
}

@media April {
  .c0 {
    font-variant-position: April;
  }
}

@media June {
  .c0 {
    font-variant-position: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-position: November;
  }
}

@media April {
  .c0 {
    font-variant-position: January;
  }
}

@media January {
  .c0 {
    font-variant-position: December;
  }
}

@media April {
  .c0 {
    font-variant-position: April;
  }
}

@media June {
  .c0 {
    font-variant-position: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-variant-position: July;
  }
}

@media April {
  .c0 {
    font-variant-position: August;
  }
}

@media January {
  .c0 {
    font-variant-position: September;
  }
}

@media April {
  .c0 {
    font-variant-position: November;
  }
}

@media June {
  .c0 {
    font-variant-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-variant-position: July;
  }
}

@media April {
  .c0 {
    font-variant-position: August;
  }
}

@media January {
  .c0 {
    font-variant-position: September;
  }
}

@media April {
  .c0 {
    font-variant-position: November;
  }
}

@media June {
  .c0 {
    font-variant-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-position: January;
  }
}

@media April {
  .c0 {
    font-variant-position: December;
  }
}

@media January {
  .c0 {
    font-variant-position: April;
  }
}

@media April {
  .c0 {
    font-variant-position: May;
  }
}

@media June {
  .c0 {
    font-variant-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-variant-position: January;
  }
}

@media April {
  .c0 {
    font-variant-position: December;
  }
}

@media January {
  .c0 {
    font-variant-position: April;
  }
}

@media April {
  .c0 {
    font-variant-position: May;
  }
}

@media June {
  .c0 {
    font-variant-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders postitive number 1`] = `
Array [
  .c0 {
  font-variant-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders string 1`] = `
Array [
  .c0 {
  font-variant-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontVariantPosition renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontVariantPosition renders valid theme path 1`] = `
Array [
  .c0 {
  font-variant-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-variant-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
